<resources>
    <string name="app_name">关注平台</string>
    <string name="app_version">软件版本：v</string>
    <string name="app_copyright">中南财经政法大学@戴宏芳</string>

    <string name="action_settings">设置</string>
    <string name="action_about">关于软件</string>

    <string name="activity_guidance_tab1">Tab One</string>
    <string name="activity_guidance_tab2">Tab Two</string>
    <string name="activity_guidance_tab3">Tab Three</string>
    <string name="activity_guidance_btn_click">开始体验</string>

    <string name="activity_main_news">热点新闻</string>
    <string name="activity_main_healthy">健康资讯</string>
    <string name="activity_main_travels">旅行游记</string>

    <string name="activity_settings_set_news_total">设置热点新闻显示条数</string>
    <string name="activity_settings_set_healthy_total">设置健康资讯显示条数</string>
    <string name="activity_settings_set_travels_total">设置旅行游记显示条数</string>
    <string name="activity_settings_favourite">我的收藏</string>
    <string name="activity_settings_exit">退出</string>
    <string name="title_activity_">Activity</string>

</resources>
