<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cn.edu.znufe.dhf.apisapp.SettingsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_top_corner_no_bottom_line"
            android:padding="10dp">

            <TextView
                android:text="@string/activity_settings_set_news_total"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_no_corner_without_bottom"
            android:padding="10dp">

            <TextView
                android:text="@string/activity_settings_set_healthy_total"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bottom_corner_no_top_line"
            android:padding="10dp">

            <TextView
                android:text="@string/activity_settings_set_travels_total"
                android:layout_column="1" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_all_corner_with_line"
            android:padding="10dp">

            <TextView
                android:text="@string/activity_settings_favourite"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_all_corner_with_line"
            android:padding="10dp">

            <TextView
                android:text="@string/activity_settings_exit"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>

</LinearLayout>
